tests/expectations/compiler/function/scope_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected : -- found '='
    --> compiler-test:10:22
     |
  10 |         let myGlobal = 42field;
     |                      ^"""]
